\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.25.4 (2022-12-01)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{get.enriched.pw} function
      adds gene symbols in the excel file.
    }
  }
}

\section{Changes in version 1.23.4 (2022-05-23)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The beta table can now be suppressed in the
      \code{determine.modules} function.
    }
  }
}

\section{Changes in version 1.21.40 (2022-04-15)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil changed the default value from
      \code{hu.mouse(host="useast.ensembl.org", ...)} to
      \code{hu.mouse(host="www.ensembl.org", ...)} to
      prevent a check error on Bioconductor.
    }
  }
}
  
\section{Changes in version 1.21.36 (2021-11-16)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil added the \code{doReturNetworks} argument to \code{one.step.pigengene()}.
    }
  }
}

\section{Changes in version 1.21.34 (2021-11-12)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil renamed \code{identify.modules()} to
      \code{determine.modules()}.
    }
  }
}

\section{Changes in version 1.21.30 (2021-11-12)}{
  \subsection{New functions}{
    \itemize{
      \item Neda exported \code{identify.modules()},
      \code{make.filter()}, and \code{apply.filter()} functions.
    }
  }
}

\section{Changes in version 1.19.50 (2021-10-14)}{
  \subsection{New functions}{
    \itemize{
      \item Neda added the \code{identify.modules()},
      \code{make.filter()}, and \code{apply.filter()} functions, but not
      exported them yet. 
    }
  }
}

\section{Changes in version 1.19.30 (2021-09-08)}{
   \subsection{Bug Fixes}{
       \itemize{
         \item The \code{averaged.network()} function does not
	 have the \code{nodes} argument in bnlearn Version >=4.7, and
	 thus this argument was removed.
    }